# adap.IA

./: README.md  requirements.txt
adap-ai-front-end/: LICENSE  README.md  package-lock.json  package.json
adap-ai-front-end/src/app/: globals.css  layout.tsx  page.tsx
adap-ai-front-end/src/app/api/clear-history/: route.ts
adap-ai-front-end/src/app/api/generate-flashcards/: route.ts
adap-ai-front-end/src/app/api/generate-mind-map/: route.ts
adap-ai-front-end/src/app/api/generate-video/: route.ts
adap-ai-front-end/src/app/api/generate-word-search/: route.ts
adap-ai-front-end/src/app/api/send-message/: route.ts
adap-ai-front-end/src/app/dashboard/: page.tsx
adap-ai-front-end/src/app/progress/: page.tsx
adap-ai-front-end/src/app/resources/: page.tsx
adap-ai-front-end/src/components/: canvas-learning.tsx  navbar.tsx
adapt-ai-backend-main/: README.md  pyproject.toml  railway.json
adapt-ai-backend-main/app/: main.py
