[tool.poetry]
name = "ai-vision-ms"
version = "0.1.0"
description = ""
authors = ["camilocbarrera <cristian.correa.cs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
requests = "^2.32.3"
groq = "^0.11.0"
pydantic = "^2.6.1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"